[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elastic-pipes"
description = "A library of Elastic Pipes"
version = "0.0.0"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Domenico Andreoli", email = "domenico.andreoli@elastic.co"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
  "elastic-pipes-core @ git+https://github.com/elastic/pipes-core-py"
]

[project.urls]
Homepage = "https://github.com/elastic/pipes-py"
"Bug Tracker" = "https://github.com/elastic/pipes-py/issues"

[tool.setuptools]
packages = ["elastic.pipes.es.snapshot"]

[tool.setuptools.package-dir]
"elastic.pipes.es.snapshot" = "es/snapshot"

[tool.black]
line-length = 140
target-version = ["py38"]
exclude = ".venv-test"

[tool.isort]
profile = 'black'
skip = [".venv-test"]

[tool.ruff]
line-length = 140
exclude = [".venv-test"]
